# cloud-industry-website

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PUBLISHING.md  README.md  index.html  platform.html  pyproject.toml  tetra.html
.github/workflows/: ci.yml  deploy.yml  publish.yml
.torsor/: .gitignore  charter.md  torsor.toml
.torsor/active/: context.md  progress.md
.torsor/architecture/: system-patterns.md  tech-context.md
.torsor/architecture/decisions/: 0002-adapters-depend-on-core-never-the-reverse.md  0003-use-stdlib-ast-for-the-cartographer-not-tree-sitter.md  0004-reference-edges-resolve-only-the-two-reliable-cases.md  0005-the-drift-baseline-is-committed-config-not-disposable-index.md  0006-dependency-check-is-advisory-and-offline.md  0007-reuse-reference-edges-for-impact-not-a-new-call-graph.md
css/: style.css
docs/: cms-integration.md
docs/superpowers/plans/: 2026-06-01-torsor-helper-phase-1-foundation.md  2026-06-01-torsor-helper-phase-2-index.md  2026-06-01-torsor-helper-phase-3-map.md  2026-06-02-torsor-helper-phase-4-guard.md  (+4 more)
js/: cms.js  fx.js  main.js
scripts/: install.sh
src/torsor_helper/: __init__.py  baseline.py  budget.py  cartographer.py  cli.py  clients.py  config.py  db.py  deps.py  embeddings.py  export.py  guard.py  indexer.py  models.py  operations.py  paths.py  recall.py  search.py  server.py  snippets.py  store.py  templates.py
tests/: conftest.py  test_baseline.py  test_budget.py  test_cartographer_edges.py  test_cartographer_extract.py  test_cartographer_render.py  test_cartographer_scan.py  test_check_drift.py  test_cli.py  test_cli_coach.py  test_cli_consolidate.py  test_cli_guard.py  test_cli_index.py  test_cli_map.py  test_clients.py  test_coach_coupling.py  test_coach_health.py  test_coach_hooks.py  test_coach_hotspots.py  test_coach_mining.py  test_coach_models.py  test_coach_recommender.py  test_coach_report.py  test_coach_state.py  test_coach_trend.py  test_config.py  test_config_index.py  test_consolidate_op.py  test_db.py  test_db_symbols.py  test_db_top_accessed.py  test_deps.py  test_embeddings.py  test_export.py  test_get_intent.py  test_guard_checks.py  test_guard_rules.py  test_http_transport.py  test_impact.py  test_indexer.py  (+22 more)
(+13 files in other folders)
